feat: 抽奖区域样式修改

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           </div>
           <div class="section_5 flex-col">
             <span class="text_54"
-              >Clean&nbsp;energy&nbsp;and&nbsp;green&nbsp;energy&nbsp;are&nbsp;continuously&nbsp;loading...</span
+              >Clean energy and green energy are <br> continuously loading...</span
             >
             <div class="group_16 flex-col">
               <div class="text-wrapper_18 flex-col">
@@ -283,127 +283,106 @@
           </div>
         </div>
         <div class="group_17 flex-col">
-          <div class="box_83 flex-row justify-between">
-            <div class="group_98 flex-col">
-              <img
-                class="image_55"
-                referrerpolicy="no-referrer"
-                src="https://lanhu-oss.lanhuapp.com/SketchPngddfd8256dc72eb9aa9d737e54b394c7618efe208ab747a5e2182b3a171e339cb"
-              />
-              <div class="text-group_73 flex-col">
-                <span class="text_318">Green&nbsp;Energy&nbsp;Value</span>
-                <span class="text_319">319980</span>
-                <span class="text_320">1&nbsp;Support&nbsp;=&nbsp;100&nbsp;Green&nbsp;Energy</span>
+          <div>
+            <div class="box_83 flex-row justify-between">
+              <div class="group_98 flex-col">
+                <img
+                  class="image_55"
+                  referrerpolicy="no-referrer"
+                  src="https://lanhu-oss.lanhuapp.com/SketchPngddfd8256dc72eb9aa9d737e54b394c7618efe208ab747a5e2182b3a171e339cb"
+                />
+                <div class="text-group_73 flex-col">
+                  <span class="text_318">Green&nbsp;Energy&nbsp;Value</span>
+                  <span class="text_319">319980</span>
+                  <span class="text_320">1&nbsp;Support&nbsp;=&nbsp;100&nbsp;Green&nbsp;Energy</span>
+                </div>
+                <div class="box_84 flex-row" onclick="openModal('.drone1')">
+                  <div class="image-text_37 flex-row justify-between">
+                    <span class="text-group_74">Cast&nbsp;Your&nbsp;Vote</span>
+                    <img
+                      class="label_9"
+                      referrerpolicy="no-referrer"
+                      src="https://lanhu-oss.lanhuapp.com/SketchPngedec5daac18ad722531f7c2b4bb3cc5300f37291370775f01a1c6e1afb8e9e91"
+                    />
+                  </div>
+                </div>
               </div>
-              <div class="box_84 flex-row" onclick="openModal('.drone1')">
-                <div class="image-text_37 flex-row justify-between">
-                  <span class="text-group_74">Cast&nbsp;Your&nbsp;Vote</span>
-                  <img
-                    class="label_9"
-                    referrerpolicy="no-referrer"
-                    src="https://lanhu-oss.lanhuapp.com/SketchPngedec5daac18ad722531f7c2b4bb3cc5300f37291370775f01a1c6e1afb8e9e91"
-                  />
+              <div class="group_99 flex-col">
+                <div class="box_85 flex-col"></div>
+                <div class="text-group_75 flex-col">
+                  <span class="text_321">Empowering</span>
+                  <span class="text_322">To&nbsp;Fuel&nbsp;Meaningful&nbsp;Change</span>
+                  <span class="paragraph_32"
+                    >Cast&nbsp;your&nbsp;vote&nbsp;and&nbsp;win&nbsp;exciting&nbsp;rewards!<br />Your&nbsp;action&nbsp;helps&nbsp;build&nbsp;the&nbsp;initial&nbsp;momentum&nbsp;for&nbsp;PURE&nbsp;POWER&nbsp;ACTION.</span
+                  >
                 </div>
               </div>
             </div>
-            <div class="group_99 flex-col">
-              <div class="box_85 flex-col"></div>
-              <div class="text-group_75 flex-col">
-                <span class="text_321">Empowering</span>
-                <span class="text_322">To&nbsp;Fuel&nbsp;Meaningful&nbsp;Change</span>
-                <span class="paragraph_32"
-                  >Cast&nbsp;your&nbsp;vote&nbsp;and&nbsp;win&nbsp;exciting&nbsp;rewards!<br /><br />Your&nbsp;action&nbsp;helps&nbsp;build&nbsp;the&nbsp;initial&nbsp;momentum&nbsp;for&nbsp;PURE&nbsp;POWER&nbsp;ACTION.</span
+            <div class="box_88 flex-row justify-between">
+              <div class="section_25 flex-col">
+                <img
+                  class="image_59"
+                  referrerpolicy="no-referrer"
+                  src="https://lanhu-oss.lanhuapp.com/SketchPng7385b90be769e41982caf1d57acc5fb6a94abc39acd159e796e6c21959bd2bc2"
+                />
+                <span class="text_330 fontRepair fontBold">Green&nbsp;Energy&nbsp;Value</span>
+                <div class="text-wrapper_88 fontRepair">
+                  <span class="text_331">（</span>
+                  <span class="text_332">updated&nbsp;weekly)</span>
+                </div>
+                <span class="text_333 fontRepair fontBold">112980</span>
+                <span class="text_334 fontRepair">1&nbsp;Sale&nbsp;=&nbsp;1000&nbsp;Green&nbsp;Energy</span>
+                <div class="text-wrapper_89 flex-col">
+                  <span class="text_335">GO&nbsp;FOR&nbsp;DEALS</span>
+                </div>
+              </div>
+              <div class="section_26 flex-col">
+                <div class="section_27 flex-col"></div>
+                <div class="text-group_78 flex-col">
+                  <span class="text_336">Amplifying</span>
+                  <span class="text_337">Accelerating Sustainable Impact</span>
+                  <span class="text_338 "
+                    >Explore exclusive discounts at the VAPORESSO CARE online store and dive into a world of sustainable innovations. Every purchase fuels PURE POWER ACTION.</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="box_89 flex-row justify-between">
+              <div class="group_100 flex-col">
+                <img
+                  class="image_60"
+                  referrerpolicy="no-referrer"
+                  src="https://lanhu-oss.lanhuapp.com/SketchPngab3cf23bd8f5432aa0754d9435c026ab886b07d96b296d0c48b5f74419a83e2c"
+                />
+                <span class="text_339 fontRepair fontBold">Green&nbsp;Energy&nbsp;Value</span>
+                <div class="text-wrapper_90 fontRepair">
+                  <span class="text_340">（</span>
+                  <span class="text_341">updated&nbsp;weekly)</span>
+                </div>
+                <span class="text_342 fontRepair fontBold">112980</span>
+                <span class="text_343 fontRepair">1&nbsp;Post&nbsp;=&nbsp;1000&nbsp;Green&nbsp;Energy</span>
+                <span class="text_344 fontRepair"
+                  >1&nbsp;Interaction&nbsp;(likes,&nbsp;comments)&nbsp;=&nbsp;100&nbsp;Green&nbsp;Energy</span
                 >
+                <div class="text-wrapper_91 flex-col">
+                  <span class="text_345">GO&nbsp;FOR&nbsp;PRIZES</span>
+                </div>
+              </div>
+              <div class="group_101 flex-col">
+                <div class="group_102 flex-col"></div>
+                <div class="text-group_79 flex-col">
+                  <span class="text_346">Illuminating</span>
+                  <span class="text_347"
+                    >Inspiring&nbsp;Clean&nbsp;Living/Lifestyle&nbsp;Worldwide</span
+                  >
+                  <span class="text_348"
+                    >Share&nbsp;your&nbsp;thoughts&nbsp;and&nbsp;experiences&nbsp;on&nbsp;using&nbsp;clean&nbsp;energy&nbsp;in&nbsp;everyday&nbsp;life&nbsp;with&nbsp;the&nbsp;VAPORESSO&nbsp;COMMUNITY.&nbsp;Spread&nbsp;the&nbsp;message&nbsp;of&nbsp;sustainable&nbsp;living&nbsp;and&nbsp;power&nbsp;up&nbsp;PURE&nbsp;POWER&nbsp;ACTION.</span
+                  >
+                </div>
               </div>
             </div>
           </div>
-          <div class="box_86 flex-row justify-between">
-            <div class="section_23 flex-col">
-              <img
-                class="image_56"
-                referrerpolicy="no-referrer"
-                src="https://lanhu-oss.lanhuapp.com/SketchPngddfd8256dc72eb9aa9d737e54b394c7618efe208ab747a5e2182b3a171e339cb"
-              />
-              <div class="text-group_76 flex-col">
-                <span class="text_323">Green&nbsp;Energy&nbsp;Value</span>
-                <span class="text_324">319981</span>
-                <span class="text_325">1&nbsp;Support&nbsp;=&nbsp;100&nbsp;Green&nbsp;Energy</span>
-              </div>
-            </div>
-            <div class="section_24 flex-col">
-              <div class="box_87 flex-col"></div>
-              <div class="text-group_77 flex-col">
-                <span class="text_328">Empowering</span>
-                <span class="text_329">To&nbsp;Fuel&nbsp;Meaningful&nbsp;Change</span>
-                <span class="paragraph_33"
-                  >Cast&nbsp;your&nbsp;vote&nbsp;and&nbsp;win&nbsp;exciting&nbsp;rewards!<br /><br />Your&nbsp;action&nbsp;helps&nbsp;build&nbsp;the&nbsp;initial&nbsp;momentum&nbsp;for&nbsp;PURE&nbsp;POWER&nbsp;ACTION.</span
-                >
-              </div>
-            </div>
-          </div>
-          <div class="box_88 flex-row justify-between">
-            <div class="section_25 flex-col">
-              <img
-                class="image_59"
-                referrerpolicy="no-referrer"
-                src="https://lanhu-oss.lanhuapp.com/SketchPng7385b90be769e41982caf1d57acc5fb6a94abc39acd159e796e6c21959bd2bc2"
-              />
-              <span class="text_330">Green&nbsp;Energy&nbsp;Value</span>
-              <div class="text-wrapper_88">
-                <span class="text_331">（</span>
-                <span class="text_332">updated&nbsp;weekly)</span>
-              </div>
-              <span class="text_333">112980</span>
-              <span class="text_334">1&nbsp;Sale&nbsp;=&nbsp;1000&nbsp;Green&nbsp;Energy</span>
-              <div class="text-wrapper_89 flex-col">
-                <span class="text_335">GO&nbsp;FOR&nbsp;DEALS</span>
-              </div>
-            </div>
-            <div class="section_26 flex-col">
-              <div class="section_27 flex-col"></div>
-              <div class="text-group_78 flex-col">
-                <span class="text_336">Amplifying</span>
-                <span class="text_337">Accelerating&nbsp;Sustainable&nbsp;Impact</span>
-                <span class="text_338"
-                  >Explore&nbsp;exclusive&nbsp;discounts&nbsp;at&nbsp;the&nbsp;VAPORESSO&nbsp;CARE&nbsp;online&nbsp;store&nbsp;and&nbsp;dive&nbsp;into&nbsp;a&nbsp;world&nbsp;of&nbsp;sustainable&nbsp;innovations.&nbsp;Every&nbsp;purchase&nbsp;fuels&nbsp;PURE&nbsp;POWER&nbsp;ACTION.</span
-                >
-              </div>
-            </div>
-          </div>
-          <div class="box_89 flex-row justify-between">
-            <div class="group_100 flex-col">
-              <img
-                class="image_60"
-                referrerpolicy="no-referrer"
-                src="https://lanhu-oss.lanhuapp.com/SketchPngab3cf23bd8f5432aa0754d9435c026ab886b07d96b296d0c48b5f74419a83e2c"
-              />
-              <span class="text_339">Green&nbsp;Energy&nbsp;Value</span>
-              <div class="text-wrapper_90">
-                <span class="text_340">（</span>
-                <span class="text_341">updated&nbsp;weekly)</span>
-              </div>
-              <span class="text_342">112980</span>
-              <span class="text_343">1&nbsp;Post&nbsp;=&nbsp;1000&nbsp;Green&nbsp;Energy</span>
-              <span class="text_344"
-                >1&nbsp;Interaction&nbsp;(likes,&nbsp;comments)&nbsp;=&nbsp;100&nbsp;Green&nbsp;Energy</span
-              >
-              <div class="text-wrapper_91 flex-col">
-                <span class="text_345">GO&nbsp;FOR&nbsp;PRIZES</span>
-              </div>
-            </div>
-            <div class="group_101 flex-col">
-              <div class="group_102 flex-col"></div>
-              <div class="text-group_79 flex-col">
-                <span class="text_346">Illuminating</span>
-                <span class="text_347"
-                  >Inspiring&nbsp;Clean&nbsp;Living/Lifestyle&nbsp;Worldwide</span
-                >
-                <span class="text_348"
-                  >Share&nbsp;your&nbsp;thoughts&nbsp;and&nbsp;experiences&nbsp;on&nbsp;using&nbsp;clean&nbsp;energy&nbsp;in&nbsp;everyday&nbsp;life&nbsp;with&nbsp;the&nbsp;VAPORESSO&nbsp;COMMUNITY.&nbsp;Spread&nbsp;the&nbsp;message&nbsp;of&nbsp;sustainable&nbsp;living&nbsp;and&nbsp;power&nbsp;up&nbsp;PURE&nbsp;POWER&nbsp;ACTION.</span
-                >
-              </div>
-            </div>
-          </div>
+
         </div>
       </div>
       <div class="group_103 flex-col">
