feat: 上部样式调整

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             />
           </div>
           <div class="text-wrapper_75 flex-row">
-            <span class="text_10">GLOBAL INITIATIVE FOR CLEAN ENERGY</span>
+            <span class="text_10 fontBold">GLOBAL INITIATIVE FOR CLEAN ENERGY</span>
           </div>
           <div class="image-wrapper_9 flex-row">
             <img
@@ -99,25 +99,27 @@
               <span class="text_24">Open-System Vape</span>
               <div class="box_3 flex-col">
                 <div class="section_1 flex-col">
-                  <div class="text-wrapper_78 flex-row">
-                    <span class="text_299"
-                      >Clean energy usage revolutionize conventional power sources</span
-                    >
-                  </div>
-                  <div class="box_77 flex-row justify-between">
-                    <div class="section_17 flex-col justify-between">
-                      <div class="box_78 flex-col"></div>
-                      <div class="box_79 flex-col"></div>
-                      <div class="box_80 flex-col"></div>
+                  <div class="rotate">
+                    <div class="text-wrapper_78 flex-row">
+                      <span class="text_299"
+                        >Clean energy usage revolutionize conventional power sources</span
+                      >
                     </div>
-                    <span class="text_300"
-                      >Fully recyclable structural design sets a new standard</span
-                    >
-                  </div>
-                  <div class="text-wrapper_79 flex-row">
-                    <span class="text_301"
-                      >Innovative materials redefine eco-friendly practices</span
-                    >
+                    <div class="box_77 flex-row justify-between">
+                      <div class="section_17 flex-col justify-between">
+                        <div class="box_78 flex-col"></div>
+                        <div class="box_79 flex-col"></div>
+                        <div class="box_80 flex-col"></div>
+                      </div>
+                      <span class="text_300"
+                        >Fully recyclable structural design sets a new standard</span
+                      >
+                    </div>
+                    <div class="text-wrapper_79 flex-row">
+                      <span class="text_301"
+                        >Innovative materials redefine eco-friendly practices</span
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
@@ -182,7 +184,7 @@
         </div>
       </div>
       <div class="group_97 flex-col">
-        <span class="paragraph_31">ACTION POWER <br />FOR SOCIETY</span>
+        <span class="paragraph_31 fontRepair fontBold">ACTION POWER <br />FOR SOCIETY</span>
         <div class="section_22 flex-col"></div>
         <div class="text-wrapper_85 flex-row justify-between">
           <span class="text_315">Pure Power Action</span>
