--- a/index.html
+++ b/index.html
@@ -605,6 +605,19 @@
           <span class="text_119">PURE POWER <br> FOR ALL!</span>
         </div>
       </div>
+      <div class="group_120 flex-col">
+        <div class="box_26 flex-col">
+          <div class="text-wrapper_31">
+            <span class="paragraph_14"
+              >Terms and Conditions:<br /><br />VAPORESSO is running Own the Spotlight Campaign for its customers. Before submitting an entry, please review the official contest rules located at</span
+            >
+            <span class="text_120">活动网址</span>
+            <span class="paragraph_15"
+              ><br />Agreement to Official Rules: Participant’s participation in the Event constitutes Participant’s full and unconditional agreement to and acceptance of these Official Rules and the decisions of Sponsor, which are final and binding. <br />By participating in the Event and submitting a Submission, Participant expressly agrees to participate in supporting marketing and other promotions and endorsements for Sponsor and its partners. <br />Sponsor may display Submission on its website or on other promotional materials without attribution or any compensation owed to Participant. More details please check on OFFICIAL RULES.</span
+            >
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
