feat: 文案替换与样式调整

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </div>
               </div>
               <span class="text_28"
-                >The ECO NANO SOLAR is a concept product, not available for public market*</span
+                >Concept product, Not Available to the Public*</span
               >
             </div>
           </div>
@@ -135,31 +135,93 @@
           <span class="text_302">ECO NANO SOLAR</span>
           <div class="text-group_68 flex-col justify-between">
             <span class="text_303"
-              >The Industry's First Solar-Powered Open-System Prototype Vape</span
+              >Pioneering a Sustainable Vision with Determination</span
             >
             <span class="text_304"
-              >ECO NANO SOLAR marks a bold leap forward for VAPORESSO, setting a new benchmark for eco-friendly innovation in the industry. This pioneering approach creates a ripple effect, inspiring a greener, more sustainable world for generations to come.</span
+              >Redefining the industry's understanding of clean energy, ECO NANO SOLAR is setting a bold precedent for eco-friendly innovation. A breakthrough not only marks a major improvement in product development, but this is also a daring step for the industry's sustainable practices, exploring new paths for renewable power sources.</span
             >
           </div>
         </div>
         <section class="img-slide-section" >
           <div class="img-slide-layout">
             <div class="img-slide-wrapper">
-              <div class="img-box img-slide-item-01" style="top: 100px; left: 0;transform: scale(1); z-index: 5;">
-                <img src="image/slide-01@2x.png" loading="lazy" alt="">
+              <div class="img-slide-item flex-col img-slide-item-01" style="z-index: 5;top: 100px;left: 0px;">
+                <div class="img-slide-item-box">
+                  <div class="img-slide-item-title">
+                    Groundbreaking Application of Degradable Photovoltaic Technology
+                    </div>
+                    <video src="video/Mob-03-1.mp4" poster="video/Mob-03-1.jpg" muted controls></video>
+                  <!-- <img src="img/Mob-03-1@3x.jpg" alt=""> -->
+                  <div class="img-slide-item-text">
+                    Powered by industry-leading OPV-PSC layered photovoltaic technology, ECO NANO SOLAR combines sustainable organic photovoltaic materials with high-performance perovskite solar cells. This innovative design achieves an impressive 26% light-to-electricity conversion efficiency and is over 80% biodegradable. When it’s time to dispose of the device, the organic photovoltaic base naturally decomposes, greatly enhancing its environmental sustainability.
+                  </div>
+                </div>
               </div>
-              <div class="img-box img-slide-item-02" style="top: 117px; left: -1px; transform: scale(.97); z-index: 4;">
-                <img src="image/slide-01@2x.png" loading="lazy" alt="">
+              <div class="img-slide-item flex-col img-slide-item-02" style="z-index: 4;top: 117px;left: -1px;transform: scale(.97);">
+                <div class="img-slide-item-box">
+                  <div class="img-slide-item-title">
+                    Revolutionary Recyclable Solar Energy Storage System
+                    </div>
+                    <video src="video/Mob-03-2.mp4" poster="video/Mob-03-2.jpg" muted controls></video>
+                  <div class="img-slide-item-text">
+                    Featuring a state-of-the-art integrated solar panel and battery system, ECO NANO SOLAR is engineered with fully separable and 100% recyclable power units. The solar cells and battery components can be independently dismantled for specialized recycling, significantly reducing the risk of heavy metal pollution. This innovative design promotes a cleaner, safer recycling process, laying the groundwork for a sustainable tomorrow. 
+                  </div>
+                </div>
               </div>
-              <div class="img-box img-slide-item-03" style="top: 136px; left: -2px; transform: scale(.93); z-index: 3;">
-                <img src="image/slide-01@2x.png" loading="lazy" alt="">
+              <div class="img-slide-item flex-col img-slide-item-03" style="z-index: 3;top: 136px;left: -2px;transform: scale(.93);">
+                <div class="img-slide-item-box">
+                  <div class="img-slide-item-title">
+                    Next-Generation Separable Modular Design
+                    </div>
+                  <!-- <img src="img/Mob-03-3@3x.jpg" alt=""> -->
+                  <video src="video/Mob-03-3.mp4" poster="video/Mob-03-3.jpg" muted controls></video>
+                  <div class="img-slide-item-text">
+                    ECO NANO SOLAR introduces a breakthrough in structural innovation, replacing the traditional integrated design with a modular structure. Each component—solar power unit, display screen, atomization core, and outer casing—is an independent, interchangeable module that can be freely replaced. This modularity enables extended product life, supports long-term use, reduces waste from disposal, and contributes to a more sustainable lifecycle. 
+                  </div>
+                </div>
               </div>
-              <div class="img-box img-slide-item-04" style="top: 151px; left: -2px; transform: scale(.9); z-index: 2;">
-                <img src="image/slide-01@2x.png" loading="lazy" alt="">
+              <div class="img-slide-item flex-col img-slide-item-04" style="z-index: 2;top: 151px;left: -2px;transform: scale(.9);">
+                <div class="img-slide-item-box">
+                  <div class="img-slide-item-title">
+                    Meticulously Crafted from Eco-Conscious Materials
+                    </div>
+                  <!-- <img src="img/Mob-03-4@3x.jpg" alt=""> -->
+                  <video src="video/Mob-03-4.mp4" poster="video/Mob-03-4.jpg" muted controls></video>
+                  <div class="img-slide-item-text">
+                    Constructed with 70% eco-friendly materials, including high-purity aluminum alloy, recycled glass, organic cotton, and PCTG, the ECO NANO SOLAR sets a new standard in environmental responsibility. Its manufacturing process conserves up to 60% more energy than traditional e-cigarette production while reducing CO₂ emissions by approximately 40%. This pioneering design not only promotes solar energy but also makes a meaningful impact in reducing the industry's environmental footprint.
+                  </div>
+                </div>
               </div>
-              <div class="img-box img-slide-item-05" style="top: 165px; left: -2px; transform: scale(.87); z-index: 1;">
-                <img src="image/slide-01@2x.png" loading="lazy" alt="">
-              </div>
+              <div class="img-slide-item flex-col img-slide-item-05" style="z-index: 1; top: 165px;left: -2px;transform: scale(.87);">
+                <div class="img-slide-item-box img-slide-item-box-5">
+                    <div class="">
+                      <div class="img-slide-item-box-5-title">
+                        Compared to conventional e-cigarettes, every 100 ECO NANO SOLAR devices result in:
+                      </div>
+                      <div class="img-slide-item-box-5-text-wrapper">
+                        <img width="56" src="img/03-5-icon 2@2x.svg" alt="">
+                        <div class="flex-col">
+                          <span>60%</span>
+                          <span>Reduction in Energy Consumption</span>
+                        </div>
+                      </div>
+                      <div class="img-slide-item-box-5-text-wrapper">
+                        <img width="56" src="img/03-5-icon 1@2x.svg" alt="">
+                        <div class="flex-col">
+                          <span>1000kg</span>
+                          <span>CO₂ Reduction</span>
+                        </div>
+                      </div>
+                      <div class="img-slide-item-box-5-text-wrapper">
+                        <img width="56" src="img/03-5-icon 3@2x.svg" alt="">
+                        <div class="flex-col">
+                          <span>75%%</span>
+                          <span>Product Recycling Rate</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               <div class="text-wrapper_80 flex-row">
                 <span class="text_32"><span class="page-num">01</span> / 05</span>
               </div>
@@ -176,6 +238,7 @@
                 >VAPORESSO Driving Energy Sustainability through The Power of Innovation
                 </span
               >
+              <div>Pioneering eco-friendly product innovation, VAPORESSO is leading the Industry into a new era of sustainable energy solutions.</div>
             </div>
           </div>
         </section>
@@ -670,11 +733,22 @@
         <div class="box_26 flex-col">
           <div class="text-wrapper_31">
             <span class="paragraph_14"
-              >Terms and Conditions:<br /><br />VAPORESSO is running Own the Spotlight Campaign for its customers. Before submitting an entry, please review the official contest rules located at</span
+              >Terms and Conditions:<br /><br />VAPORESSO is running PURE POWER FOR ALL Activity for its customers.
+              </span
             >
-            <span class="text_120">活动网址</span>
+            <a href="" class="text_120">活动网址</a>
             <span class="paragraph_15"
-              ><br />Agreement to Official Rules: Participant’s participation in the Event constitutes Participant’s full and unconditional agreement to and acceptance of these Official Rules and the decisions of Sponsor, which are final and binding. <br />By participating in the Event and submitting a Submission, Participant expressly agrees to participate in supporting marketing and other promotions and endorsements for Sponsor and its partners. <br />Sponsor may display Submission on its website or on other promotional materials without attribution or any compensation owed to Participant. More details please check on OFFICIAL RULES.</span
+              ><br />
+              Agreement to Official Rules: Participant’s 
+              participation in the Event constitutes Participant’s 
+              full and unconditional agreement to and acceptance of 
+              these Official Rules and the decisions of Sponsor, which are final and binding. <br>
+              By participating in the Event and submitting a Submission, 
+              the Participant expressly agrees to participate in supporting marketing 
+              and other promotions and endorsements for the Sponsor and its partners. <br>
+              Sponsor may display Submission on its website or on other promotional 
+              materials without attribution or any compensation owed to Participant. For more details please check on
+              <a href="">OFFICIAL RULES</a>.</span
             >
           </div>
         </div>
